# StellarRaffle-Pro.1

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_FEATURES.md  SECURITY.md  build_logs.md  commits.ps1  deploy_out.txt  feedback_responses.xlsx  package.json  wasm_hex.txt
contract/: Cargo.toml
contract/.cargo/: config.toml
contract/src/: hello.rs  lib.rs  raffle.rs  test.rs
contract/test_snapshots/test/: test_bronze_tier_no_referral.1.json  test_buy_after_deadline_panics.1.json  test_professional_workflow.1.json  test_self_referral_blocked.1.json
frontend/: .env  .env.example  README.md  deploy_out.txt  deploy_raffle.js  error_log.txt  index.html  package-lock.json  package.json
frontend/public/: helper.html
frontend/src/: App.jsx  App.test.jsx  config.js  index.css  main.jsx
frontend/src/components/: Balance.jsx  BuyTicket.jsx  CountdownTimer.tsx  DataIndex.jsx  DrawHistory.tsx  FeaturesDashboard.tsx  Leaderboard.tsx  MetricsDashboard.jsx  Monitoring.jsx  MultiTicketPurchase.tsx  MyTicketsDashboard.tsx  OddsCalculator.tsx  RaffleInfo.jsx  StreakBonus.tsx  TierSelector.jsx  VaultTracker.tsx  Wallet.jsx  WinnerHistory.jsx
frontend/src/context/: FreighterContext.jsx
frontend/src/hooks/: useContract.ts  useFreighter.js  useStellar.js
prototypes/: prototype_dark.html
scripts/: deploy_raffle.js
